--- a/views/login.ejs
+++ b/views/login.ejs
@@ -76,6 +76,9 @@
     <% if (locals.success && success.length > 0) { %>
         <div style="color: green;"><%= success %></div>
     <% } %>
+    <% if (locals.error && error.length > 0) { %>
+        <div style="color: red;"><%= error %></div>
+    <% } %>
     
 </body>
 </html>
