initialize admin menu and backend concept

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -73,7 +73,7 @@
             Edit Quiz
         </button> -->
         <% if (locals.user && locals.user.username === "admin") { %>
-            <button><a href="/edit-quiz">Edit Quiz</a></button>
+            <button><a href="/admin/menu">Edit Quiz</a></button>
           <% } %>
 
         <form action="/logout" method="POST">
