--- a/views/admin/menu.ejs
+++ b/views/admin/menu.ejs
@@ -19,6 +19,12 @@
     </li>
   <% }) %>
 </ul>
+<% if (locals.success && success.length > 0) { %>
+  <div style="color: green;"><%= success %></div>
+<% } %>
+<% if (locals.error && error.length > 0) { %>
+  <div style="color: red;"><%= error %></div>
+<% } %>
     
 </body>
 </html>
