--- a/views/admin/newQuiz.ejs
+++ b/views/admin/newQuiz.ejs
@@ -11,6 +11,13 @@
   <label for="name">Quiz Name:</label>
   <input type="text" name="name" required>
   <button type="submit">Create</button>
+  
 </form>
+<% if (locals.success && success.length > 0) { %>
+  <div style="color: green;"><%= success %></div>
+<% } %>
+<% if (locals.error && error.length > 0) { %>
+  <div style="color: red;"><%= error %></div>
+<% } %>
 </body>
 </html>
