--- a/views/admin/newQuiz.ejs
+++ b/views/admin/newQuiz.ejs
@@ -10,6 +10,9 @@
 <form action="/admin/quiz" method="POST">
   <label for="name">Quiz Name:</label>
   <input type="text" name="name" required>
+  <label>Category</label>
+<input name="category" required>
+
   <button type="submit">Create</button>
   
 </form>
