--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -68,6 +68,9 @@
         <button class="btn btn-start" onclick="location.href='/subjects'">
             Start Quiz
         </button>
+        <button class="btn btn-start" onclick="location.href='/subjects'">
+            Start Quiz
+        </button>
 
         <form action="/logout" method="POST">
             <button type="submit" class="btn btn-logout">Log out</button>
