--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="/Style/style.css">
     <title><%= subject.name %> Quiz</title>
 </head>
 <body>
