--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
+   
 <head>
-  
+    <link rel="stylesheet" href="/Style/style.css">
 </head>
 
 <body class="bg-image">
@@ -12,7 +12,6 @@
             <!-- Main content goes here -->
             <form action="/signup" method="POST" class="m-8 p-6 form" autocomplete="off">
                 <h1 class="text-center mb-4">Sign up</h1>
-
                 <div class="mb-2">
                     <label for="username" class="form-text pb-1">Enter your username</label>
                     <input type="username" id="username" class="form-control" name="username" placeholder="username"
