--- a/views/leaderboard.ejs
+++ b/views/leaderboard.ejs
@@ -3,6 +3,7 @@
 <html>
 <head>
     <title>Leaderboard</title>
+    <link rel="stylesheet" href="/Style/leaderboard.css">
 </head>
 <body>
     <h1>Leaderboard</h1>
