--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -8,18 +8,12 @@
     <title>MJHSQUIZZ</title>
 </head>
 <body>
-    <main class="container">
-        <div class="form">
-            <h1 class="text-center">MJHSQUIZZ</h1>
-            
-            <div class="d-flex flex-col mt-8">
-                <button class="btn btn-primary w-100 mb-3" onclick="location.href='/subjects'">
-                    Start Quiz
-                </button>
-                <div class="d-flex flex-col mt-8">
-                    <button class="btn btn-primary w-100 mb-3" onclick="location.href='/history'">
-                        History
-                    </button>
+    <div class="container">
+        <h1>MJHSQUIZZ</h1>
+        
+        <button class="btn btn-start" onclick="location.href='/subjects'">
+            Start Quiz
+        </button>
 
                 <form action="/logout" method="POST" class="w-100">
                     <button type="submit" class="btn btn-secondary w-100">Log out</button>
