--- a/views/result.ejs
+++ b/views/result.ejs
@@ -3,6 +3,7 @@
 <html>
 <head>
     <title>Quiz Result</title>
+    <link rel="stylesheet" href="/Style/result.css">
 </head>
 <body>
     <h1>Your Score: <%= score %>/<%= total %></h1>
