--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/Style/style.css">
+    <link rel="stylesheet" href="/Style/menu.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,8 +11,11 @@
     <div class="container">
         <h1>MJHSQUIZZ</h1>
         
-        <button class="btn btn-start" onclick="location.href='/subjects'">
+        <button class="btn btn-secondary w-100" onclick="location.href='/subjects'">
             Start Quiz
+        </button>
+        <button class="btn btn-secondary w-100" onclick="location.href='/history'">
+            History
         </button>
 
                 <form action="/logout" method="POST" class="w-100">
