--- a/views/history.ejs
+++ b/views/history.ejs
@@ -34,7 +34,7 @@
       </table>
     <% } %>
   
-    <a href="/" class="btn btn-secondary mt-3">Back to Home</a>
+    <a href="/menu" class="btn btn-secondary mt-3">Back to Home</a>
   </div>
   
 </body>
